# sigil

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/: .env  file-filters.yml
.github/actions/: install-solana.yml
.github/actions/cache-crate/: action.yml
.github/actions/cache-idl-generators/: action.yml
.github/actions/start-validator/: action.yml
.github/workflows/: build-programs.yml  build-rust-client.yml  main.yml  test-js-client.yml  test-programs.yml  test-rust-client.yml
clients/js/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
clients/js/src/hooked/: index.ts  mintAccount.ts
clients/js/test/: _common.ts  _setup.ts  add-token.test.ts  burn.test.ts  burn.ts  closeMint.test.ts  create.test.ts  mint-to.test.ts  mintTo.test.ts  transfer.test.ts
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: create.rs  transfer.rs
clients/rust/tests/helpers/: mod.rs
program/: Cargo.toml  README.md  idl.json  keypair.json
program/src/: assertions.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
program/src/processor/: add_token.rs  burn.rs  close.rs  close_mint.rs  create_mint.rs  create_token.rs  mint_to.rs  mod.rs  transfer.rs
program/src/state/: mint.rs  mod.rs  pocket.rs
scripts/: generate-clients.mjs
scripts/client/: test-rust.mjs
