[package]
name = "nifty-oss-token-lite"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "BpPMgxYawb8Qiguavj3JccMdp7bTZWemSqJmDeYTsTD9"
program-dependencies = ["AssetGtQBTSgm5s91d1RAQod5JmaZiJDxqsgtqrZud73"]

[lib]
crate-type = ["cdylib", "lib"]

[features]
test-bpf = []

[dependencies]
borsh = "^0.10"
bytemuck = "1.14.0"
shank = "^0.4.2"
num-derive = "^0.3"
num-traits = "^0.2"
stevia = { path = "../../stevia" }
solana-program = "1.16.27"
thiserror = "^1.0"
nifty-asset-interface = "0.4.0"
