[package]
name = "sigil_program"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "BpPMgxYawb8Qiguavj3JccMdp7bTZWemSqJmDeYTsTD9"
program-dependencies = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "^0.10"
bytemuck = "1.16.0"
num-derive = "^0.3"
num_enum = "0.7.2"
num-traits = "^0.2"
pinocchio = "0.8.4"
pinocchio-log = "0.4.0"
pinocchio-pubkey = "0.2.4"
pinocchio-system = "0.2.3"
shank = "^0.4.2"
stevia = { git = "https://github.com/nifty-oss/stevia.git" }
thiserror = "^1.0"
