[package]
name = "nifty-oss-token-lite-client"
version = "0.0.0"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"

[features]
test-sbf = []
serde = ["dep:serde", "dep:serde_with"]

[dependencies]
borsh = "^0.10"
nifty-asset = "0.4.0"
num-derive = "^0.3"
num-traits = "^0.2"
nifty-oss-token-lite = { path = "../../program" }
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-program = "~1.16"
thiserror = "^1.0"

[dev-dependencies]
assert_matches = "1.5.0"
stevia = { path = "../../../stevia" }
solana-program-test = "~1.16"
solana-sdk = "~1.16"
