[package]
name = "sigil-client"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Client for the Solana Sigil token program"
repository = "https://github.com/nifty-oss/sigil"
homepage = "https://github.com/nifty-oss/sigil"
license-file = "../../LICENSE"

[features]
test-sbf = []
serde = ["dep:serde", "dep:serde_with"]

[dependencies]
borsh = "^0.10"
kaigan = { version = "0.2.5", features = ["serde"] }
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-program = "~1.16"
thiserror = "^1.0"

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "~1.16"
solana-sdk = "~1.16"
